# eeg-mood-sync

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
docs/: DEMO.md
docs/screenshots/: README.md
models/: README.md  metrics.json
scripts/: build_demo_video.py  download_subset.sh
src/eeg_mood_sync/: audio_render.py  cli.py  dataset_ds004148.py  eeg.py  mapping.py  midi_gen.py  ml_train.py  viz.py
tests/: test_dataset.py  test_portfolio.py
